--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,4 +1,13 @@
-json 2.0.9
-tensorflow 2.7.0
-transformers 4.12.3
-gdown 3.6.4
+emoji==1.7.0
+farasa==0.0.1
+gdown==4.5.1
+matplotlib==3.2.1
+numpy==1.19.0
+pandas==1.1.5
+PyArabic==0.6.15
+requests==2.27.1
+scikit_learn==1.1.1
+pytorch-transformers==1.0.0
+torch==1.10.2
+transformers==4.5.1
+
